--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         header {
-            background-color: #4672b4;
+            background-color:#e0218a ;
             color: white;
             padding: 20px;
         }
@@ -74,7 +74,7 @@
         }
 
         footer {
-            background-color: #4682b4;
+            background-color: #e0218a ;
             color: white;
             padding: 10px;
             position: fixed;
