--- a/index.html
+++ b/index.html
@@ -141,6 +141,57 @@
         </div>
     </section>
 
+     <h3>2025<h3>
+    <section class="gallery">
+       
+        <div class="gallery-item">
+            <img src="images/IMG-20240601-WA0002.jpg" alt="Daughter's Picture 1" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/IMG_20240619_151049.jpg" alt="Daughter's Picture 2" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/IMG_20240717_142722.jpg" alt="Daughter's Picture 3" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/IMG_20240707_094602.jpg" alt="Daughter's Picture 4" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/IMG_20240809_170933.jpg" alt="Daughter's Picture 5" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/Snapchat-1139576618.jpg" alt="Daughter's Picture 6" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/Snapchat-1568383644.jpg" alt="Daughter's Picture 7" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/IMG_20241209_060907.jpg" alt="Daughter's Picture 8" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/IMG_20240921_092352.jpg" alt="Daughter's Picture 9" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/IMG-20241225-WA0011.jpg" alt="Daughter's Picture 10" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/IMG-20241206-WA0023.jpg" alt="Daughter's Picture 11" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/IMG-20241218-WA0003.jpg" alt="Daughter's Picture 12" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/Snapchat-915183796.jpg" alt="Daughter's Picture 13" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/IMG-20241227-WA0009.jpg" alt="Daughter's Picture 14" onclick="openModal(this.src)">
+        </div>
+        <div class="gallery-item">
+            <img src="images/IMG-20241226-WA0013.jpg" alt="Daughter's Picture 15" onclick="openModal(this.src)">
+        </div>
+    </section>
+
+
     <!-- Modal for viewing images -->
     <div id="imageModal" class="modal">
         <span class="close" onclick="closeModal()">&times;</span>
