--- a/index.html
+++ b/index.html
@@ -145,50 +145,42 @@
     <section class="gallery">
        
         <div class="gallery-item">
-            <img src="images/IMG-20240601-WA0002.jpg" alt="Daughter's Picture 1" onclick="openModal(this.src)">
+            <img src="new images/2aea0e5b-0ef7-415a-9d4f-d09bdb460e36.jpg" alt="Daughter's Picture 16" onclick="openModal(this.src)">
         </div>
         <div class="gallery-item">
-            <img src="images/IMG_20240619_151049.jpg" alt="Daughter's Picture 2" onclick="openModal(this.src)">
+            <img src="new images/327cb051-eaa7-4d03-8328-6d3e2aea00ea.jpg" alt="Daughter's Picture 17" onclick="openModal(this.src)">
         </div>
         <div class="gallery-item">
-            <img src="images/IMG_20240717_142722.jpg" alt="Daughter's Picture 3" onclick="openModal(this.src)">
+            <img src="new images/5bb4d03d-16ca-49fb-81bf-929dc92f36bb.jpg" alt="Daughter's Picture 18" onclick="openModal(this.src)">
         </div>
         <div class="gallery-item">
-            <img src="images/IMG_20240707_094602.jpg" alt="Daughter's Picture 4" onclick="openModal(this.src)">
+            <img src="new images/5dcef97d-a3f9-4efc-8270-70cd2a6279e8.jpg" alt="Daughter's Picture 19" onclick="openModal(this.src)">
         </div>
         <div class="gallery-item">
-            <img src="images/IMG_20240809_170933.jpg" alt="Daughter's Picture 5" onclick="openModal(this.src)">
+            <img src="new images/7503ef21-4f9c-44d6-94e5-7048befb38c7.jpg" alt="Daughter's Picture 20" onclick="openModal(this.src)">
         </div>
         <div class="gallery-item">
-            <img src="images/Snapchat-1139576618.jpg" alt="Daughter's Picture 6" onclick="openModal(this.src)">
+            <img src="new images/8e06d881-f9a9-4477-bc80-8ee76cfe9e73.jpg" alt="Daughter's Picture 21" onclick="openModal(this.src)">
         </div>
         <div class="gallery-item">
-            <img src="images/Snapchat-1568383644.jpg" alt="Daughter's Picture 7" onclick="openModal(this.src)">
+            <img src="new images/afdf6641-467f-4d7a-82c9-3337f489dcdd.jpg" alt="Daughter's Picture 22" onclick="openModal(this.src)">
         </div>
         <div class="gallery-item">
-            <img src="images/IMG_20241209_060907.jpg" alt="Daughter's Picture 8" onclick="openModal(this.src)">
+            <img src="new images/ba724c84-c1bb-4d64-957b-d0d50db19dc9.jpg" alt="Daughter's Picture 23" onclick="openModal(this.src)">
         </div>
         <div class="gallery-item">
-            <img src="images/IMG_20240921_092352.jpg" alt="Daughter's Picture 9" onclick="openModal(this.src)">
+            <img src="new images/bb3919a0-068d-4afe-a43e-bfc9e45b356d.jpg" alt="Daughter's Picture 24" onclick="openModal(this.src)">
         </div>
         <div class="gallery-item">
-            <img src="images/IMG-20241225-WA0011.jpg" alt="Daughter's Picture 10" onclick="openModal(this.src)">
+            <img src="new images/c818f07b-9c6f-4043-b608-a7d5eb8de41a.jpg" alt="Daughter's Picture 25" onclick="openModal(this.src)">
         </div>
         <div class="gallery-item">
-            <img src="images/IMG-20241206-WA0023.jpg" alt="Daughter's Picture 11" onclick="openModal(this.src)">
+            <img src="new images/e04f689b-792a-4ac9-877b-be001c32f058.jpg" alt="Daughter's Picture 26" onclick="openModal(this.src)">
         </div>
         <div class="gallery-item">
-            <img src="images/IMG-20241218-WA0003.jpg" alt="Daughter's Picture 12" onclick="openModal(this.src)">
+            <img src="new images/e96a426d-237e-4bb1-bf90-3101954937c0.jpg" alt="Daughter's Picture 27" onclick="openModal(this.src)">
         </div>
-        <div class="gallery-item">
-            <img src="images/Snapchat-915183796.jpg" alt="Daughter's Picture 13" onclick="openModal(this.src)">
-        </div>
-        <div class="gallery-item">
-            <img src="images/IMG-20241227-WA0009.jpg" alt="Daughter's Picture 14" onclick="openModal(this.src)">
-        </div>
-        <div class="gallery-item">
-            <img src="images/IMG-20241226-WA0013.jpg" alt="Daughter's Picture 15" onclick="openModal(this.src)">
-        </div>
+        
     </section>
 
 
